kubernetes/services/local-ai/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aiml
  namespace: aiml
  annotations:
    external-dns.alpha.kubernetes.io/hostname: chat.capi-core.homelab.danmanners.com
  labels:
    ingress: aiml-httproute
spec:
  hostnames:
  - chat.capi-core.homelab.danmanners.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default
    namespace: aiml
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: open-webui
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 0s
      request: 0s
